# eMF

./: .gitignore  CMakeLists.txt  Pipfile  README.md
compare-data/: getdata4comp.py
compare-data/examples/format-1/: data4comp.out
compare-data/examples/format-2/: data4comp.out  test-emf-digest-2.out
example/: dhfr-diffusion.conf  dhfr-fitmodels.conf  dhfr-rjmap.conf  dhfr-test.digested  dhfr-test.out
input-generator/: emf-inputgen.py  input.conf  test.py
src/: aniso.cxx  anneal.cxx  brent.cxx  chisq.cxx  conjgr.cxx  data.cxx  eMF-digest  emf.h  file.cxx  fitmodel.cxx  func.cxx  func2.cxx  gmin.cxx  grid.cxx  levmar.cxx  main.cxx  mle.cxx  powell.cxx  print.cxx  rand.cxx  rjmap.cxx  simplex.cxx
tools/compare-data/: get_data_comparison.py
tools/compare-data/examples/format-1/: data_comparison.out
tools/compare-data/examples/format-2/: data_comparison.out  test-emf-digest-1.out
tools/input-generator/: emf-inputgen.py  emf_inputgen.py  input.conf
tools/input-generator/example/: input.conf
